--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -1,4 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="<%= assets.taprich %>">
+    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="/index.css">
+    <title>TapRich</title>
+  </head>
+  <body>
   
+  </body>
 </html>
