🕍👳 Checkpoint ./src/Classes/Server.js:25276072/1310 ./src/Classes/TapRich.js:25276072/76 ./src/public/style.css:25276072/41 ./src/views/index.ejs:25276072/262 ./src/public/script.js:25276072/159

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -9,6 +9,16 @@
     <title>TapRich</title>
   </head>
   <body>
-  
+    
+<!--     first play -->
+    <div class="first-play">
+      <div class="first-play-box">
+        <div class="first-play-group">
+          <img src="">
+        </div>
+      </div>
+    </div>
+    
+    <script src="script.js" defer></script>
   </body>
 </html>
