📮😻 Checkpoint ./src/assets.js:25276072/123 ./src/views/index.ejs:25276072/799 ./src/public/style.css:25276072/313

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -11,11 +11,19 @@
   <body>
     
 <!--     first play -->
-    <div class="first-play">
+    <div class="first-play" id="first-play">
       <div class="first-play-box">
         <div class="first-play-group">
-          <img src="">
+          <img src="<%= assets.question %>">
         </div>
+        <div class="first-play-group">
+          Welcome to <strong>TapRich</strong> game! this is Clicker game, so you need <strong>tap</strong> faster as you can to get rich faster! <strong>enjoy!</strong>
+        </div>
+        <div class="first-play-group">
+          <button class="btn btn-start">
+            Start earn
+          </button>
+        </div>        
       </div>
     </div>
     
