--- a/src/public/style.css
+++ b/src/public/style.css
@@ -11,3 +11,21 @@ body {
   font-family: 'Poppins', sans-serif;
   background-color: #9bf218;
 }
+
+.btn {
+  outline: none;
+  border: 0;
+  padding: 10px 40px;
+  font-size: 16px;
+  background-color: #00d607;
+  font-weight: bold;
+  border-radius: 6px;
+}
+
+.btn:hover {
+  background-color: #0ce813;
+}
+
+.btn:focus {
+  background-color: #0ce813;
+}
