--- a/src/public/style.css
+++ b/src/public/style.css
@@ -36,45 +36,24 @@ body {
   background-color: #00b3ff;
 }
 
-strong {
-  transition: 0.2s;
-  cursor: pointer;
-}
-
-strong:hover {
-  animation-name: strongtext;
-  animation-duration: 2s;
-  animation-iteration-count: infinite;
-  animation-timing-function: ease-in-out;
-}
-
 /* keyframe */
 @keyframes shake {
   0% {
-    transform: rotate(0deg)
+    transform: rotate(0deg);
   }
   20% {
-    transform: rotate(-2deg)
+    transform: rotate(2deg);
   }
   40% {
-    transform: rotate(2deg)
+    transform: rotate(-2deg);
+  }
+  60% {
+    transform: rotate(2deg);
   }
   80% {
-    transform: rotate(-2deg)
+    transform: rotate(-2deg);
   }
   100% {
-    transform: rotate(2deg)
-  }
-}
-
-@keyframes strongtext {
-  0% {
-    font-size: 16px;
-  }
-  50% {
-    font-size: 20px;
-  }
-  100% {
-    font-size: 16px;
-  }
+    transform: rotate(0deg);
+  }  
 }
