🍅📌 Checkpoint ./src/public/index.css:25276072/1465 ./src/views/index.ejs:25276072/15 ./src/public/script.js:25276072/413 ./src/public/style.css:25276072/45

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -20,7 +20,7 @@
           Welcome to <strong>TapRich</strong> game! this is Clicker game, so you need <strong>tap</strong> faster as you can to get rich faster! <strong>enjoy!</strong>
         </div>
         <div class="first-play-group">
-          <button class="btn btn-start">
+          <button class="btn btn-start" id="start-btn">
             Start earn
           </button>
         </div>        
