--- a/src/public/index.css
+++ b/src/public/index.css
@@ -8,6 +8,13 @@
   background: #3d3d3d;
   padding: 20px;
   border-radius: 4px;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: fit-content;
+  transition: all 0.5s;
 }
 
 .first-play-group img {
@@ -29,11 +36,10 @@
 }
 
 @media (max-width: 490px) {
-  
   .first-play {
-    width: 100vw;
+    width: 100%;
     height: 100vh;
-    margin: 0;
+    margin: auto;
+    border-radius: 0;
   }
-  
 }
