--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -11,6 +11,9 @@
   <body>
     
 <!--     first play -->
+    <div class="main" id="click">
+    </div>
+    
     <div class="first-play" id="first-play">
       <div class="first-play-box">
         <div class="first-play-group">
