🤖🏮 Checkpoint ./src/views/index.ejs:25276072/581

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -30,6 +30,21 @@
       </div>
     </div>
     
+<!--     navigation -->
+    <div class="navbar navbar-hide">
+      <ul class="navs">
+        <li class="nav-item">
+          <a class="nav-link" onclick="openNav()"></a>
+        </li>
+      </ul>
+      
+      <div class="navbar-groups">
+        <div class="navbar-group-btn">
+          
+        </div>
+      </div>
+    </div>
+    
     <script src="script.js" defer></script>
   </body>
 </html>
