🍅📖 Checkpoint ./src/assets.js:25276072/313 ./src/views/index.ejs:25276072/291

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -34,13 +34,17 @@
     <div class="navbar navbar-hide">
       <ul class="navs">
         <li class="nav-item">
-          <a class="nav-link" onclick="openNav()"></a>
+          <a class="nav-link" onclick="openNav()"><img src="<%= assets.up %>"></a>
         </li>
       </ul>
       
       <div class="navbar-groups">
         <div class="navbar-group-btn">
-          
+          <ul class="navbars">
+            <li class="navbar-item">
+              <a class="navbar-link" onclick="navOpen('dollar')"><img src="<%= assets.dollar %>"></a>
+            </li>
+          </ul>
         </div>
       </div>
     </div>
