--- a/src/public/index.css
+++ b/src/public/index.css
@@ -48,12 +48,11 @@ body {
 }
 
 .navbar {
-  overflow: hidden;
   height: 101vh;
   background: #3d3d3d;
   transform: translateY(0vh);
   transition: 1s;
-  width: 101%;
+  width: 100%;
 }
 
 ul {
@@ -70,7 +69,17 @@ ul.navs {
 }
 
 .navbar.navbar-on {
-  transform: translateY(-91vh);
+  transform: translateY(-93vh);
+}
+
+.navbar-groups {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+a.navbar-link {
+  cursor: pointer;
 }
 
 @media (max-width: 490px) {
